fix about spacing.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,13 +11,15 @@ html {
   width: auto;
   background-size: cover;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .banner .container {
   display: flex;
   flex-direction: column;
   width: 960px;
+  align-items: center;
 }
 
 .container .navigation {
@@ -59,9 +61,15 @@ html {
   padding: 1rem 2rem;
 }
 
+.banner .container2 {
+  display: flex;
+  width: 1032px;
+  justify-content: flex-end;
+}
+
 .caption {
   display: flex;
-  justify-content: flex-end;
+
 }
 
 .caption h2 {
@@ -155,12 +163,14 @@ html {
   flex-direction: row;
   width: 960px;
   justify-content: space-around;
+  border: 1px solid black;
 }
 
 .container .philosophy {
   display: flex;
   flex-direction: column;
   width: 35%;
+  border: 1px solid black;
 }
 
 .heading {
@@ -184,6 +194,7 @@ html {
   flex-direction: column;
   margin-right: 5%;
   width: 35%;
+  border: 1px solid black;
 }
 
 .footer {
